A bunch of hacks to make it display correctly on iOS

--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,9 @@
 html {
   box-sizing: border-box;
   user-select: none;
-  font-size: 2.5vmax;
+  font-size: 16px;
 }
 *, *:before, *:after {
-  backface-visibility: hidden;
-  perspective: 1000;
-  transform: translateZ(0);
   box-sizing: inherit;
 }
 
